Add Google Sign-In configuration to index.html

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,10 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Electrical Device Monitoring App">
 
+  <!-- Google Sign-In Web Configuration -->
+  <meta name="google-signin-client_id"
+    content="152632355525-o0s4j347b6pfqrl4fgnq67h7e44in39c.apps.googleusercontent.com">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
